--- a/less/global.less
+++ b/less/global.less
@@ -37,7 +37,7 @@ p {
 }
 
 .top {
-  max-width: 850px;
+  max-width: 950px;
   width: 100%;
   margin: 0 auto;
 }
