--- a/less/home-page.less
+++ b/less/home-page.less
@@ -39,6 +39,7 @@
 
   .image1 {
     .radius;
+    margin-top: 15%;
   }
 
   .visit-planets {
