--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,7 +3,9 @@
 .top {
     .flexnav(flex, column, space-around, center);
     background-color: @border-real;
-    height: 9rem;
+    height: 12.5rem;
+    position: fixed;
+    left: 300px;
 
     .toph1 {
         font-size: 4rem;
@@ -12,8 +14,14 @@
 
     a {
         font-size: 1.6rem;
-        padding: 1.4rem;
+        padding: 1.8rem;
         text-decoration: none;
         color: @main-font-color;
+        
+        &:hover {
+            background-color: darkcyan;
+        }
     }
+
+    
 }
